// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChannelNotification /> spec renders with create permission and no default notification 1`] = `
<div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div>
    <div
      class="euiText euiText--small"
    >
      <h3>
        Notifications
      </h3>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiCallOut euiCallOut--primary"
      data-test-subj="defaultNotificationCallout"
    >
      <div
        class="euiCallOutHeader"
      >
        EuiIconMock
        <span
          class="euiCallOutHeader__title"
        >
          Your administrator may have set default notification settings for 
          shrink
           operations. You can send additional notifications for this operation.
        </span>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiFormRow euiFormRow--compressed"
      id="some_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="some_html_id"
        >
          <div
            class="euiText euiText--small"
          >
            <h4>
              Send additional notifications when operation
            </h4>
          </div>
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <span
          class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
        >
          <div
            class="euiCheckbox euiCheckbox--compressed"
          >
            <input
              class="euiCheckbox__input"
              data-test-subj="notificationCustomConditionHasFailed"
              id="builtInCheckBoxId-0"
              type="checkbox"
            />
            <div
              class="euiCheckbox__square"
            />
            <label
              class="euiCheckbox__label"
              for="builtInCheckBoxId-0"
            >
              Has failed / timed out
            </label>
          </div>
        </span>
        <div
          class="euiSpacer euiSpacer--s"
        />
        <span
          class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
        >
          <div
            class="euiCheckbox euiCheckbox--compressed"
          >
            <input
              class="euiCheckbox__input"
              id="builtInCheckBoxId-1"
              type="checkbox"
            />
            <div
              class="euiCheckbox__square"
            />
            <label
              class="euiCheckbox__label"
              for="builtInCheckBoxId-1"
            >
              Has completed
            </label>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChannelNotification /> spec renders with full permission and default notification 1`] = `
<div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div>
    <div
      class="euiText euiText--small"
    >
      <h3>
        Notifications
      </h3>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiCallOut euiCallOut--primary"
      data-test-subj="defaultNotificationCallout"
    >
      <div
        class="euiCallOutHeader"
      >
        EuiIconMock
        <span
          class="euiCallOutHeader__title"
        >
          Default notification settings are set for 
          shrink
           operations. Configure default settings at
           
          <a
            class="euiLink euiLink--primary"
            href="#/notifications"
            rel="noopener noreferrer"
            style="text-decoration: underline;"
            target="_blank"
          >
            Notifications settings
            <span
              class="euiScreenReaderOnly"
            >
              (opens in a new tab or window)
            </span>
          </a>
          .
        </span>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiFormRow euiFormRow--compressed"
          id="some_html_id-row"
        >
          <div
            class="euiFormRow__labelWrapper"
          >
            <label
              class="euiFormLabel euiFormRow__label"
              for="some_html_id"
            >
              Notify when operation
            </label>
          </div>
          <div
            class="euiFormRow__fieldWrapper"
          >
            <ul
              style="list-style: inside disc; text-indent: 1.5em;"
            >
              <li>
                Has failed
              </li>
              <li>
                Has completed
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiFormRow euiFormRow--compressed"
          id="some_html_id-row"
        >
          <div
            class="euiFormRow__labelWrapper"
          >
            <label
              class="euiFormLabel euiFormRow__label"
              for="some_html_id"
            >
              Channels to notify
            </label>
          </div>
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              style="line-height: 1.5;"
            >
              <span
                class="euiBadge euiBadge--hollow euiBadge--iconLeft"
                title="1 (chime)"
              >
                <span
                  class="euiBadge__content"
                >
                  <span
                    class="euiBadge__text"
                  >
                    1
                     (
                    chime
                    )
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <span
      class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
    >
      <div
        class="euiCheckbox euiCheckbox--compressed"
      >
        <input
          class="euiCheckbox__input"
          data-test-subj="sendAddtionalNotificationsCheckBox"
          id="builtInCheckBoxId-14"
          type="checkbox"
        />
        <div
          class="euiCheckbox__square"
        />
        <label
          class="euiCheckbox__label"
          for="builtInCheckBoxId-14"
        >
          Send additional notifications
        </label>
      </div>
    </span>
  </div>
  <button
    class="euiButton euiButton--primary"
    data-test-subj="submit"
    type="button"
  >
    <span
      class="euiButtonContent euiButton__content"
    >
      <span
        class="euiButton__text"
      >
        send additional notification
      </span>
    </span>
  </button>
</div>
`;

exports[`<ChannelNotification /> spec renders with full permission and no default notification 1`] = `
<div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div>
    <div
      class="euiText euiText--small"
    >
      <h3>
        Notifications
      </h3>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiCallOut euiCallOut--primary"
      data-test-subj="defaultNotificationCallout"
    >
      <div
        class="euiCallOutHeader"
      >
        EuiIconMock
        <span
          class="euiCallOutHeader__title"
        >
          Your administrator may have set default notification settings for 
          shrink
           operations. You can send additional notifications for this operation.
        </span>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiFormRow euiFormRow--compressed"
      id="some_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="some_html_id"
        >
          <div
            class="euiText euiText--small"
          >
            <h4>
              Send additional notifications when operation
            </h4>
          </div>
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <span
          class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
        >
          <div
            class="euiCheckbox euiCheckbox--compressed"
          >
            <input
              class="euiCheckbox__input"
              data-test-subj="notificationCustomConditionHasFailed"
              id="builtInCheckBoxId-2"
              type="checkbox"
            />
            <div
              class="euiCheckbox__square"
            />
            <label
              class="euiCheckbox__label"
              for="builtInCheckBoxId-2"
            >
              Has failed / timed out
            </label>
          </div>
        </span>
        <div
          class="euiSpacer euiSpacer--s"
        />
        <span
          class="euiToolTipAnchor euiToolTipAnchor--displayBlock"
        >
          <div
            class="euiCheckbox euiCheckbox--compressed"
          >
            <input
              class="euiCheckbox__input"
              id="builtInCheckBoxId-3"
              type="checkbox"
            />
            <div
              class="euiCheckbox__square"
            />
            <label
              class="euiCheckbox__label"
              for="builtInCheckBoxId-3"
            >
              Has completed
            </label>
          </div>
        </span>
      </div>
    </div>
  </div>
  <button
    class="euiButton euiButton--primary"
    data-test-subj="submit"
    type="button"
  >
    <span
      class="euiButtonContent euiButton__content"
    >
      <span
        class="euiButton__text"
      >
        send additional notification
      </span>
    </span>
  </button>
</div>
`;

exports[`<ChannelNotification /> spec renders with view permission and default notification 1`] = `
<div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div>
    <div
      class="euiText euiText--small"
    >
      <h3>
        Notifications
      </h3>
    </div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiCallOut euiCallOut--primary"
      data-test-subj="defaultNotificationCallout"
    >
      <div
        class="euiCallOutHeader"
      >
        EuiIconMock
        <span
          class="euiCallOutHeader__title"
        >
          Your administrator has set default notification settings for 
          shrink
           operations. Contact your administrator to request access.
        </span>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem"
      >
        <div
          class="euiFormRow euiFormRow--compressed"
          id="some_html_id-row"
        >
          <div
            class="euiFormRow__labelWrapper"
          >
            <label
              class="euiFormLabel euiFormRow__label"
              for="some_html_id"
            >
              Notify when operation
            </label>
          </div>
          <div
            class="euiFormRow__fieldWrapper"
          >
            <ul
              style="list-style: inside disc; text-indent: 1.5em;"
            >
              <li>
                Has failed
              </li>
              <li>
                Has completed
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem"
      >
        <div
          class="euiFormRow euiFormRow--compressed"
          id="some_html_id-row"
        >
          <div
            class="euiFormRow__labelWrapper"
          >
            <label
              class="euiFormLabel euiFormRow__label"
              for="some_html_id"
            >
              Channels to notify
            </label>
          </div>
          <div
            class="euiFormRow__fieldWrapper"
          >
            <div
              style="line-height: 1.5;"
            >
              <span
                class="euiBadge euiBadge--hollow euiBadge--iconLeft"
                title="1 (chime)"
              >
                <span
                  class="euiBadge__content"
                >
                  <span
                    class="euiBadge__text"
                  >
                    1
                     (
                    chime
                    )
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
